# glaxnimate

./: .craft.ini  .flatpak-manifest.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .kde-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Messages.sh  README.md  REUSE.toml  metainfo.yaml  snapcraft.yaml
.reuse/: dep5
lib-example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/android/: CMakeLists.txt  android_file_picker.cpp  android_file_picker.hpp  android_intent_handler.cpp  android_intent_handler.hpp  android_style.cpp  android_style.hpp  base_dialog.cpp  base_dialog.hpp  better_toolbox_widget.cpp  better_toolbox_widget.hpp  document_opener.cpp  document_opener.hpp  format_selection_dialog.cpp  format_selection_dialog.hpp  help_dialog.cpp  help_dialog.hpp  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  sticker_pack_builder_dialog.cpp  sticker_pack_builder_dialog.hpp  telegram_intent.cpp  telegram_intent.hpp  timeline_slider.cpp  timeline_slider.hpp
src/android/android/: AndroidManifest.xml  build.gradle
src/cli_utils/: cli.cpp  cli.hpp  env.hpp
src/core/: CMakeLists.txt  app_info.cpp  app_info.hpp  application_info_generated.in.hpp
src/core/command/: animation_commands.cpp  animation_commands.hpp  object_list_commands.hpp  property_commands.hpp  shape_commands.cpp  shape_commands.hpp  structure_commands.cpp  structure_commands.hpp  undo_macro_guard.hpp
src/core/glaxnimate/: app_info.cpp  app_info.hpp  application_info_generated.in.hpp  init.cpp  init.hpp  qbytearray_hash.hpp  qstring_hash.hpp
src/core/io/: animated_properties.hpp  base.cpp  base.hpp  binary_stream.cpp  binary_stream.hpp  io_registry.cpp  io_registry.hpp  utils.cpp  utils.hpp
src/core/math/: ellipse_solver.cpp  ellipse_solver.hpp  geom.cpp  geom.hpp  math.hpp  polynomial.cpp  vector.hpp
src/core/model/: animation_container.cpp  animation_container.hpp  comp_graph.cpp  custom_font.cpp  document.cpp  document.hpp  document_node.cpp  document_node.hpp  factory.cpp  factory.hpp  mask_settings.cpp  mask_settings.hpp  node_map.hpp  object.cpp  object.hpp  simple_visitor.hpp  stretchable_time.cpp  stretchable_time.hpp  transform.cpp  transform.hpp  visitor.cpp
src/core/plugin/: action.cpp  action.hpp  io.cpp  io.hpp  plugin.cpp  plugin.hpp  snippet.hpp
src/core/renderer/: cairo_renderer.hpp  qpainter_renderer.hpp  renderer.cpp  renderer.hpp  skia_renderer.hpp  thorvg_renderer.hpp
src/core/utils/: gzip.cpp  gzip.hpp  i18n.hpp  maybe_ptr.hpp  quantize.cpp  quantize.hpp  tar.cpp  tar.hpp  trace.cpp  trace.hpp  trace_wrapper.cpp  trace_wrapper.hpp  value_cache.hpp
src/extras/: CMakeLists.txt
src/extras/glps/: CMakeLists.txt  glps.cpp
src/extras/pscli/: CMakeLists.txt  pscli.cpp
src/gui/: CMakeLists.txt  cli.cpp  cli.hpp  glaxnimate_app.cpp  glaxnimate_app.hpp  glaxnimate_settings.kcfg  glaxnimate_settings.kcfgc  glaxnimatesettings.kcfg  glaxnimatesettings.kcfgc  glaxnimateui.rc  gui_python.cpp  main.cpp
src/gui/emoji/: emoji_data.cpp  emoji_data.hpp  emoji_dialog.cpp  emoji_dialog.hpp  emoji_set.cpp  emoji_set.hpp  emoji_set_dialog.cpp  emoji_set_dialog.hpp
src/gui/graphics/: bezier_item.cpp  bezier_item.hpp  composition_item.hpp  create_items.cpp  create_items.hpp  document_node_graphics_item.cpp  document_node_graphics_item.hpp  document_scene.cpp  document_scene.hpp  gradient_editor.cpp  gradient_editor.hpp  graphics_editor.hpp  handle.cpp  handle.hpp  item_data.hpp  position_item.hpp  rect_rounder.hpp  shape_graphics_item.hpp  sizepos_item.hpp  snapping_grid.cpp  snapping_grid.hpp  star_radius_item.hpp  text_attributes_editor.hpp  transform_graphics_item.cpp  transform_graphics_item.hpp  typed_item.hpp
src/gui/gui_python/: gui_python.cpp  python_engine.cpp  python_engine.hpp
src/gui/item_models/: asset_proxy_model.hpp  comp_filter_model.cpp  comp_filter_model.hpp  document_model_base.cpp  document_model_base.hpp  document_node_model.cpp  document_node_model.hpp  drag_data.hpp  gradient_list_model.cpp  gradient_list_model.hpp  log_model.cpp  log_model.hpp  node_type_proxy_model.hpp  property_model_base.cpp  property_model_base.hpp  property_model_full.cpp  property_model_full.hpp  property_model_private.hpp  property_model_single.cpp  property_model_single.hpp  proxy_base.hpp  python_snippet_model.hpp
src/gui/resources/: glaxnimate.in.qrc
src/gui/settings/: api_credentials.cpp  api_credentials.hpp  api_keys.in.hpp  base.hpp  clipboard_settings.cpp  clipboard_settings.hpp  custom_settings_group.hpp  document_templates.cpp  document_templates.hpp  icon_settings.cpp  icon_settings.hpp  icon_theme.cpp  icon_theme.hpp  plugin_settings_group.hpp  toolbar_settings.hpp  widget_builder.hpp
src/gui/style/: better_elide_delegate.hpp  dock_widget_style.cpp  dock_widget_style.hpp  fixed_height_delegate.hpp  property_delegate.cpp  property_delegate.hpp  scroll_area_event_filter.cpp  scroll_area_event_filter.hpp
src/gui/tools/: base.cpp  base.hpp  color_picker.cpp  draw_tool.cpp  draw_tool.hpp  draw_tool_base.cpp  draw_tool_base.hpp  draw_tool_drag.hpp  edit_tool.cpp  edit_tool.hpp  ellipse_tool.cpp  fill_tool.cpp  freehand.cpp  handle_menu.hpp  rectangle_tool.cpp  rectangle_tool.hpp  select_tool.cpp  star_tool.cpp  text_tool.cpp
src/gui/widgets/: canvas.cpp  canvas.hpp  enum_combo.cpp  enum_combo.hpp  flow_layout.cpp  flow_layout.hpp  no_close_on_enter.hpp  numeric_spinbox.cpp  numeric_spinbox.hpp  render_widget.cpp  render_widget.hpp  scalable_button.hpp  smaller_spinbox.hpp  spin2d.cpp  spin2d.hpp  view_transform_widget.cpp  view_transform_widget.hpp  window_message_widget.cpp  (+1 more)
src/plugin/: CMakeLists.txt  action.cpp  action.hpp  executor.hpp  io.cpp  io.hpp  plugin.cpp  plugin.hpp  script_engine.cpp  script_engine.hpp  service.hpp  snippet.hpp
src/python/: CMakeLists.txt  README.md  miscdefs.cpp  miscdefs.hpp  python.cpp  setup.in.py
src/trace/: CMakeLists.txt  quantize.cpp  quantize.hpp  trace.cpp  trace.hpp  trace_wrapper.cpp  trace_wrapper.hpp
src/wasm/: CMakeLists.txt  Readme.md  custom.js  js_registrar.hpp  package.json  register_js.hpp  wasm.cpp
(+873 files in other folders)
